set (Qt_SRCS
QDoubleReleaseSlider.cxx
QDoubleReleaseSlider.h
QDoubleSlider.cxx
QDoubleSlider.h
QRAMThread.cxx
QRAMThread.h
QReleaseDial.cxx
QReleaseDial.h
QReleaseScrollBar.cxx
QReleaseScrollBar.h
QReleaseScrollBarValue.cxx
QReleaseScrollBarValue.h
QReleaseSlider.cxx
QReleaseSlider.h
QReleaseSliderValue.cxx
QReleaseSliderValue.h
mqAboutDialog.cxx
mqAboutDialog.h
mqAboutDialogReaction.cxx
mqAboutDialogReaction.h
mqActorTreePanel.cxx
mqActorTreePanel.h
mqBooleanOperationDialog.cxx
mqBooleanOperationDialog.h
mqBooleanOperationDialogReaction.cxx
mqBooleanOperationDialogReaction.h
mqCameraControlsWidget.cxx
mqCameraControlsWidget.h
mqCameraDialog.cxx
mqCameraDialog.h
mqCameraDialogReaction.cxx
mqCameraDialogReaction.h
mqCameraReaction.cxx
mqCameraReaction.h
mqChangeNodeReaction.cxx
mqChangeNodeReaction.h
mqColorChooserButton.cxx
mqColorChooserButton.h
mqColorDialog.cxx
mqColorDialog.h
mqColorDialogReaction.cxx
mqColorDialogReaction.h
mqColorOpacityEditorWidget.cxx
mqColorOpacityEditorWidget.h
mqCoreUtilities.cxx
mqCoreUtilities.h
mqCreateLMKDialog.cxx
mqCreateLMKDialog.h
mqCreateLMKDialogReaction.cxx
mqCreateLMKDialogReaction.h
mqCubeDialog.cxx
mqCubeDialog.h
mqCubeDialogReaction.cxx
mqCubeDialogReaction.h
mqCylinderDialog.cxx
mqCylinderDialog.h
mqCylinderDialogReaction.cxx
mqCylinderDialogReaction.h
mqDecimateDialog.cxx
mqDecimateDialog.h
mqDecimateDialogReaction.cxx
mqDecimateDialogReaction.h
mqDecomposeDialog.cxx
mqDecomposeDialog.h
mqDecomposeDialogReaction.cxx
mqDecomposeDialogReaction.h
mqDensifyDialog.cxx
mqDensifyDialog.h
mqDensifyDialogReaction.cxx
mqDensifyDialogReaction.h
mqDesktopServicesReaction.cxx
mqDesktopServicesReaction.h
mqDisplayControlsWidget.cxx
mqDisplayControlsWidget.h
mqDisplayReaction.cxx
mqDisplayReaction.h
mqEditACTORDialog.cxx
mqEditACTORDialog.h
mqEditACTORDialogReaction.cxx
mqEditACTORDialogReaction.h
mqEditAllFLGColorDialog.cxx
mqEditAllFLGColorDialog.h
mqEditAllFLGColorDialogReaction.cxx
mqEditAllFLGColorDialogReaction.h
mqEditAllFLGLengthDialog.cxx
mqEditAllFLGLengthDialog.h
mqEditAllFLGLengthDialogReaction.cxx
mqEditAllFLGLengthDialogReaction.h
mqEditAlphaDialog.cxx
mqEditAlphaDialog.h
mqEditAlphaDialogReaction.cxx
mqEditAlphaDialogReaction.h
mqEditFLGDialog.cxx
mqEditFLGDialog.h
mqEditFLGDialogReaction.cxx
mqEditFLGDialogReaction.h
mqEditLMKDialog.cxx
mqEditLMKDialog.h
mqEditLMKDialogReaction.cxx
mqEditLMKDialogReaction.h
mqEditScalarsDialog.cxx
mqEditScalarsDialog.h
mqEditScalarsDialogReaction.cxx
mqEditScalarsDialogReaction.h
mqEditTagsDialog.cxx
mqEditTagsDialog.h
mqEditTagsDialogReaction.cxx
mqEditTagsDialogReaction.h
mqEditVolumeDialog.cxx
mqEditVolumeDialog.h
mqEditVolumeDialogReaction.cxx
mqEditVolumeDialogReaction.h
mqExpandableTableView.cxx
mqExpandableTableView.h
mqExtractScalarRangeDialog.cxx
mqExtractScalarRangeDialog.h
mqExtractScalarRangeDialogReaction.cxx
mqExtractScalarRangeDialogReaction.h
mqExtractTagRangeDialog.cxx
mqExtractTagRangeDialog.h
mqExtractTagRangeDialogReaction.cxx
mqExtractTagRangeDialogReaction.h
mqFillHolesDialog.cxx
mqFillHolesDialog.h
mqFillHolesDialogReaction.cxx
mqFillHolesDialogReaction.h
mqFlipSwapDialog.cxx
mqFlipSwapDialog.h
mqFlipSwapDialogReaction.cxx
mqFlipSwapDialogReaction.h
mqGridSizeDialog.cxx
mqGridSizeDialog.h
mqGridSizeDialogReaction.cxx
mqGridSizeDialogReaction.h
mqHistogramWidget.cxx
mqHistogramWidget.h
mqICPDialog.cxx
mqICPDialog.h
mqICPDialogReaction.cxx
mqICPDialogReaction.h
mqIcosahedronDialog.cxx
mqIcosahedronDialog.h
mqIcosahedronDialogReaction.cxx
mqIcosahedronDialogReaction.h
mqInteractionControlsWidget.cxx
mqInteractionControlsWidget.h
mqIsosurfaceDialog.cxx
mqIsosurfaceDialog.h
mqIsosurfaceDialogReaction.cxx
mqIsosurfaceDialogReaction.h
mqLandmarkDialog.cxx
mqLandmarkDialog.h
mqLandmarkDialogReaction.cxx
mqLandmarkDialogReaction.h
mqLightControlsWidget.cxx
mqLightControlsWidget.h
mqLineEdit.cxx
mqLineEdit.h
mqMainControlsWidget.cxx
mqMainControlsWidget.h
mqMergeTagsDialog.cxx
mqMergeTagsDialog.h
mqMergeTagsDialogReaction.cxx
mqMergeTagsDialogReaction.h
mqMinimalDialog.cxx
mqMinimalDialog.h
mqMinimalDialogReaction.cxx
mqMinimalDialogReaction.h
mqMinimalWidget.cxx
mqMinimalWidget.h
mqMorphoDigCore.cxx
mqMorphoDigCore.h
mqMorphoDigMenuBuilders.cxx
mqMorphoDigMenuBuilders.h
mqMoveCurveHandlesDialog.cxx
mqMoveCurveHandlesDialog.h
mqObjectsControlsWidget.cxx
mqObjectsControlsWidget.h
mqOpenDataReaction.cxx
mqOpenDataReaction.h
mqOpenDicomStackDialog.cxx
mqOpenDicomStackDialog.h
mqOpenRawDialog.cxx
mqOpenRawDialog.h
mqOpenTiff3DDialog.cxx
mqOpenTiff3DDialog.h
mqOrientationLabelsDialog.cxx
mqOrientationLabelsDialog.h
mqOrientationLabelsDialogReaction.cxx
mqOrientationLabelsDialogReaction.h
mqReaction.cxx
mqReaction.h
mqSaveCURDialog.cxx
mqSaveCURDialog.h
mqSaveCURDialogReaction.cxx
mqSaveCURDialogReaction.h
mqSaveCURasVERDialog.cxx
mqSaveCURasVERDialog.h
mqSaveCURasVERDialogReaction.cxx
mqSaveCURasVERDialogReaction.h
mqSaveDataReaction.cxx
mqSaveDataReaction.h
mqSaveFlagsDialog.cxx
mqSaveFlagsDialog.h
mqSaveFlagsDialogReaction.cxx
mqSaveFlagsDialogReaction.h
mqSaveLandmarksDialog.cxx
mqSaveLandmarksDialog.h
mqSaveLandmarksDialogReaction.cxx
mqSaveLandmarksDialogReaction.h
mqSaveMAPDialog.cxx
mqSaveMAPDialog.h
mqSaveMAPDialogReaction.cxx
mqSaveMAPDialogReaction.h
mqSaveMHDMHADialog.h
mqSaveMHDMHADialog.cxx
mqSaveMHDMHADialogReaction.h
mqSaveMHDMHADialogReaction.cxx
mqSaveNTWDialog.cxx
mqSaveNTWDialog.h
mqSaveNTWDialogReaction.cxx
mqSaveNTWDialogReaction.h
mqSaveOBJDialog.cxx
mqSaveOBJDialog.h
mqSaveOBJDialogReaction.cxx
mqSaveOBJDialogReaction.h
mqSavePLYDialog.cxx
mqSavePLYDialog.h
mqSavePLYDialogReaction.cxx
mqSavePLYDialogReaction.h
mqSaveSTLDialog.cxx
mqSaveSTLDialog.h
mqSaveSTLDialogReaction.cxx
mqSaveSTLDialogReaction.h
mqSaveSTVDialog.cxx
mqSaveSTVDialog.h
mqSaveSTVDialogReaction.cxx
mqSaveSTVDialogReaction.h
mqSaveTAGMAPDialog.cxx
mqSaveTAGMAPDialog.h
mqSaveTAGMAPDialogReaction.cxx
mqSaveTAGMAPDialogReaction.h
mqSaveVTIDialog.h
mqSaveVTIDialog.cxx
mqSaveVTIDialogReaction.h
mqSaveVTIDialogReaction.cxx
mqSaveVTKDialog.cxx
mqSaveVTKDialog.h
mqSaveVTKDialogReaction.cxx
mqSaveVTKDialogReaction.h
mqScalarsComplexityDialog.cxx
mqScalarsComplexityDialog.h
mqScalarsComplexityDialogReaction.cxx
mqScalarsComplexityDialogReaction.h
mqScalarsControlsWidget.cxx
mqScalarsControlsWidget.h
mqScalarsCurvatureDialog.cxx
mqScalarsCurvatureDialog.h
mqScalarsCurvatureDialogReaction.cxx
mqScalarsCurvatureDialogReaction.h
mqScalarsDistanceDialog.cxx
mqScalarsDistanceDialog.h
mqScalarsDistanceDialogReaction.cxx
mqScalarsDistanceDialogReaction.h
mqScalarsInfosDialog.cxx
mqScalarsInfosDialog.h
mqScalarsInfosDialogReaction.cxx
mqScalarsInfosDialogReaction.h
mqScalarsNormalizationDialog.cxx
mqScalarsNormalizationDialog.h
mqScalarsNormalizationDialogReaction.cxx
mqScalarsNormalizationDialogReaction.h
mqScalarsSmoothDialog.cxx
mqScalarsSmoothDialog.h
mqScalarsSmoothDialogReaction.cxx
mqScalarsSmoothDialogReaction.h
mqScalarsThicknessBetweenDialog.cxx
mqScalarsThicknessBetweenDialog.h
mqScalarsThicknessBetweenDialogReaction.cxx
mqScalarsThicknessBetweenDialogReaction.h
mqScalarsThicknessDialog.cxx
mqScalarsThicknessDialog.h
mqScalarsThicknessDialogReaction.cxx
mqScalarsThicknessDialogReaction.h
mqSelectLandmarkRangeDialog.cxx
mqSelectLandmarkRangeDialog.h
mqSelectLandmarkRangeDialogReaction.cxx
mqSelectLandmarkRangeDialogReaction.h
mqSetName.cxx
mqSetName.h
mqShrinkWrapDialog.cxx
mqShrinkWrapDialog.h
mqShrinkWrapDialogReaction.cxx
mqShrinkWrapDialogReaction.h
mqShrinkWrapIterativeDialog.cxx
mqShrinkWrapIterativeDialog.h
mqShrinkWrapIterativeDialogReaction.cxx
mqShrinkWrapIterativeDialogReaction.h
mqSmoothDialog.cxx
mqSmoothDialog.h
mqSmoothDialogReaction.cxx
mqSmoothDialogReaction.h
mqSurfaceTagInfosDialog.cxx
mqSurfaceTagInfosDialog.h
mqSurfaceTagInfosDialogReaction.cxx
mqSurfaceTagInfosDialogReaction.h
mqTPSDialog.cxx
mqTPSDialog.h
mqTPSDialogReaction.cxx
mqTPSDialogReaction.h
mqTableView.cxx
mqTableView.h
mqTagFromRGBDialog.cxx
mqTagFromRGBDialog.h
mqTagFromRGBDialogReaction.cxx
mqTagFromRGBDialogReaction.h
mqTransferFunctionWidget.cxx
mqTransferFunctionWidget.h
mqUndoRedoReaction.cxx
mqUndoRedoReaction.h
mqUndoStack.cxx
mqUndoStack.h
mqViewMenuManager.cxx
mqViewMenuManager.h
mqVolumeOptionsDialog.cxx
mqVolumeOptionsDialog.h
mqVolumeOptionsDialogReaction.cxx
mqVolumeOptionsDialogReaction.h

)

set (Qt_MOC_HDRS
  mqAboutDialogReaction.h
  mqAboutDialog.h
)

set (Qt_UIs mqAboutDialog.ui
mqActorTreePanel.ui
mqBooleanOperationDialog.ui
mqCameraControlsWidget.ui
mqCameraDialog.ui
mqColorDialog.ui
mqColorOpacityEditorWidget.ui
mqCreateLMKDialog.ui
mqCubeDialog.ui
mqCylinderDialog.ui
mqDecimateDialog.ui
mqDecomposeDialog.ui
mqDensifyDialog.ui
mqDisplayControlsWidget.ui
mqEditACTORDialog.ui
mqEditAllFLGColorDialog.ui
mqEditAllFLGLengthDialog.ui
mqEditAlphaDialog.ui
mqEditFLGDialog.ui
mqEditLMKDialog.ui
mqEditScalarsDialog.ui
mqEditTagsDialog.ui
mqEditVolumeDialog.ui
mqExtractScalarRangeDialog.ui
mqExtractTagRangeDialog.ui
mqFillHolesDialog.ui
mqFlipSwapDialog.ui
mqGridSizeDialog.ui
mqICPDialog.ui
mqIcosahedronDialog.ui
mqIsosurfaceDialog.ui
mqInteractionControlsWidget.ui
mqLandmarkDialog.ui
mqLightControlsWidget.ui
mqMainControlsWidget.ui
mqMergeTagsDialog.ui
mqMinimalDialog.ui
mqMoveCurveHandlesDialog.ui
mqObjectsControlsWidget.ui
mqOpenDicomStackDialog.ui
mqOpenRawDialog.ui
mqOpenTiff3DDialog.ui
mqOrientationLabelsDialog.ui
mqSaveCURDialog.ui
mqSaveCURasVERDialog.ui
mqSaveFlagsDialog.ui
mqSaveLandmarksDialog.ui
mqSaveMAPDialog.ui
mqSaveMHDMHADialog.ui
mqSaveNTWDialog.ui
mqSaveOBJDialog.ui
mqSavePLYDialog.ui
mqSaveSTLDialog.ui
mqSaveSTVDialog.ui
mqSaveTAGMAPDialog.ui
mqSaveVTIDialog.ui
mqSaveVTKDialog.ui
mqScalarsComplexityDialog.ui
mqScalarsControlsWidget.ui
mqScalarsCurvatureDialog.ui
mqScalarsDistanceDialog.ui
mqScalarsInfosDialog.ui
mqScalarsNormalizationDialog.ui
mqScalarsSmoothDialog.ui
mqScalarsThicknessBetweenDialog.ui
mqScalarsThicknessDialog.ui
mqSelectLandmarkRangeDialog.ui
mqShrinkWrapDialog.ui
mqShrinkWrapIterativeDialog.ui
mqSmoothDialog.ui
mqSurfaceTagInfosDialog.ui
mqTagFromRGBDialog.ui
mqTPSDialog.ui
mqVolumeOptionsDialog.ui
)

set( Qt_RCs ../Icons/icons.qrc )


# We have ui files, this will bring in the macro: qt5_wrap_ui
find_package(Qt5 COMPONENTS Widgets REQUIRED QUIET)
include_directories(${Qt5Widgets_INCLUDE_DIRS})
qt5_wrap_ui(QtUI_Srcs ${Qt_UIs})
qt5_add_resources(QRC_Srcs ${Qt_RCS} )


 source_group("Resources" FILES
    ${Qt_UIs}
    ${Qt_RCs}
    
  )

  source_group("Generated" FILES
    ${QtUI_Srcs}   
    ${QRC_Srcs}   

   
  )
#for some reason, otherwise wrapped ui related .h files are not read
include_directories ("${PROJECT_BINARY_DIR}/Qt")

include_directories ("${PROJECT_SOURCE_DIR}/Helpers")



ADD_LIBRARY (MorphoDigQt ${Qt_SRCS} ${QtUI_Srcs} ${Qt_UIs}   
 

 
#${Qt_HDRS}
)




